--- a/config/crd/bases/events.openfunction.io_triggers.yaml
+++ b/config/crd/bases/events.openfunction.io_triggers.yaml
@@ -67,6 +67,11 @@ spec:
                 description: Inputs defines the event sources associated with the
                   Trigger
                 type: object
+              logVerboseLevel:
+                description: The logging verbose level of the trigger handler, e.g.
+                  "1", "2", "3". The level increases as the value increases, default
+                  is "1".
+                type: string
               subscribers:
                 description: Subscribers defines the subscribers associated with the
                   Trigger
